--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-  "intelephense.environment.includePaths": [
-    "vendor/mercadopago/dx-php/src"
-  ],
   "intelephense.files.associations": [
     "*.php"
   ],
+  "intelephense.environment.includePaths": [
+    "vendor"  
+],
   "intelephense.diagnostics.undefinedTypes": false
 }
+
